--- a/style.css
+++ b/style.css
@@ -95,9 +95,47 @@ button:focus-visible {
   }
 }
 
+main {
+  display: flex;
+  flex-direction: row;
+  place-items: center;
+  width:80%;
+  height:100%;
+  margin:auto;
+}
+
+.menu {
+  background-color: black;
+  border-radius: 2em;
+  width:50%;
+  height: 80vh;
+  font-weight: bold;
+}
+
+#tabs {
+  width:100%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.tab {
+  display:inline-block;
+  width: fit-content;
+  padding: 0.25em 2em;
+  text-align: center;
+  margin: 0.5em 0.25em;
+  border-radius: 1em 1em 0 0;
+  background-color: rgb(61, 61, 61);
+  cursor: pointer;
+}
+
 #rend{
   -ms-interpolation-mode: nearest-neighbor;
   image-rendering: pixelated;
-  width: 100vw !important;
-  height: 100vh !important;
+  width: 80vh !important;   /* This intentionally uses vh so that it's in the same units as the height */
+  height: 80vh !important;
+  border-radius: 2em;
+  padding: 0 0.5em 0 1em;
 }
