--- a/style.css
+++ b/style.css
@@ -13,6 +13,15 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -138,4 +147,12 @@ main {
   height: 80vh !important;
   border-radius: 2em;
   padding: 0 0.5em 0 1em;
+}
+
+.directionalButton {
+  position: absolute;
+  bottom: 5%; 
+  font-weight: bold;
+  font-size:1.5em;
+  cursor:pointer;
 }
