Adding more tab menu / grid menu functionality

--- a/style.css
+++ b/style.css
@@ -161,3 +161,23 @@ main {
   cursor:pointer;
   text-align: center;
 }
+
+#grid {
+  display: flex;
+  padding: 1em;
+}
+
+.grid-button {
+  background-color: rgb(61, 61, 61);
+  position:relative;
+  min-width: 6em;
+  min-height: 6em;
+  border-radius: 1em;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+}
+
+.selected-tab {
+  background-color:rgb(187, 187, 0);
+}
