--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #05001a;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -34,7 +34,6 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -110,22 +109,22 @@ main {
   place-items: center;
   width:80%;
   height:100%;
-  margin:auto;
-  background-color: grey;
-  padding: 1em 0.8em 1em 0;
-  border-radius: 1em;
+  margin: 2em auto;
+  background-color: rgb(49, 49, 49);
+  border: 0.2em solid black;
+  border-radius:1em;
 }
 
 .menu {
-  background-color: black;
-  border-radius: 2em;
-  width:50%;
+  background-color: rgb(27, 27, 27);
+  width:100%;
   height: 80vh;
   font-weight: bold;
 }
 
 #tabs {
-  width:100%;
+  width: 90%;
+  margin: 2.5% auto 0;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
@@ -137,19 +136,24 @@ main {
   width: fit-content;
   padding: 0.25em 2em;
   text-align: center;
-  margin: 0.5em 0.25em;
-  border-radius: 1em 1em 0 0;
+  border-radius: 0.2em 0.2em 0 0;
   background-color: rgb(61, 61, 61);
   cursor: pointer;
+  margin: 0.5em 0 0 0;
+}
+
+#three{
+  position:relative;
+  width:100%;
 }
 
 #rend{
   -ms-interpolation-mode: nearest-neighbor;
   image-rendering: pixelated;
-  width: 80vh !important;   /* This intentionally uses vh so that it's in the same units as the height */
-  height: 80vh !important;
-  border-radius: 2em;
-  margin: 0 0.5em 0 1em;
+  width: 90% !important;   /* This intentionally uses vh so that it's in the same units as the height */
+  height: 90% !important;
+  margin: auto;
+  border-radius: 0.5em;
 }
 
 .directionalButton {
