--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
   line-height: 1.5;
   font-weight: 400;
 
+  font-size:0.9em;
+
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #05001a;
@@ -173,6 +175,7 @@ main {
   padding: 1em;
   margin: 1em 2.5%;
   background-color: black;
+  height: 60%;
 }
 
 .grid-button {
@@ -181,6 +184,7 @@ main {
   display:block;
   min-width: 6em;
   min-height: 6em;
+  max-height: 6em;
   border-radius: 0.25em;
   text-align: center;
   cursor: pointer;
@@ -195,4 +199,19 @@ main {
 
 .selected-tab {
   background-color:rgb(187, 187, 0);
+}
+
+#color-picker {
+  position:absolute;
+  bottom:0;
+  width: calc(100% - 2em);
+  height: 5em;
+  margin: 1em 1em 1.5em 1em;
+  border: 0.4em solid rgba(0,0,0,0.25);
+  box-sizing: border-box;
+  border-radius:0.5em;
+  color: rgba(0,0,0,0.2);
+  text-align: center;
+  padding: 0;
+  cursor:pointer;
 }
