--- a/src/style.css
+++ b/src/style.css
@@ -38,11 +38,13 @@ body {
   display: flex;
   min-width: 320px;
   min-height: 100vh;
+  flex-direction: column;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: 2.5em;
+  line-height: 1;
+  margin: 1em auto 0.4em auto;
 }
 
 #app {
