--- a/src/style.css
+++ b/src/style.css
@@ -125,26 +125,34 @@ main {
   height: 80vh;
   font-weight: bold;
   position:relative;
+  display:flex;
+  flex-direction:column;
 }
 
 #tabs {
-  width: 90%;
-  margin: 2.5% auto 0;
+  width: 20em;
+  height: 48em;
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: space-around;
+  justify-content: start;
+  flex-direction: column;
+  vertical-align: top;
+  text-align: center;
+  padding: 0 1em 0.75em 1em;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 .tab {
-  display:inline-block;
-  width: fit-content;
-  padding: 0.25em 2em;
+  width:100%;
+  box-sizing: border-box;
+  padding: 0.25em 1em;
+  font-size:1.2em;
   text-align: center;
-  border-radius: 0.2em 0.2em 0 0;
-  background-color: rgb(61, 61, 61);
+  border-radius: 0.2em;
+  background-color: rgb(21, 21, 21);
   cursor: pointer;
-  margin: 0.5em 0 0 0;
+  margin: 0.75em 0 0 0;
+  white-space: nowrap;
 }
 
 #three{
@@ -199,7 +207,7 @@ main {
   padding: 1em;
   margin: 1em 2.5%;
   background-color: black;
-  height: 60%;
+  height: 100%;
 }
 
 .grid-button {
@@ -226,11 +234,9 @@ main {
 }
 
 #color-picker {
-  position:absolute;
-  bottom:0;
   width: calc(100% - 2em);
-  height: 5em;
-  margin: 1em 1em 1.5em 1em;
+  height: 20%;
+  margin: 0em 1em 1.5em 1em;
   border: 0.4em solid rgba(0,0,0,0.25);
   box-sizing: border-box;
   border-radius:0.5em;
