More UI changes

--- a/src/style.css
+++ b/src/style.css
@@ -115,7 +115,7 @@ main {
   width:80%;
   height:100%;
   margin: 2em auto;
-  background-color: rgb(49, 49, 49);
+  background-color: rgb(27, 27, 27);
   border: 0.2em solid black;
   border-radius:1em;
 }
@@ -132,6 +132,7 @@ main {
 
 #three{
   position:relative;
+  background-color:rgb(49,49,49);
   width:100%;
 }
 
@@ -147,7 +148,7 @@ main {
 #render-button-container{
   height:2em;
   vertical-align: middle;
-  padding-top:0.25em;
+  padding-top:0.9em;
   left: 50%;
   top: 0;
   transform: translate(-50%,0);
